Bug 693240 Use *((PRUint32*)ap) instead of *((bool*)ap) for big endian machines r=glandium